# rnnoise

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  Pipfile  experiment1.rb  testmodel.pb
examples/: rnnoise_demo.c
include/: rnnoise.h
src/: common.h  denoise.cpp  rnn.c  rnn.h  rnn_data.c  rnn_data.h  tensorflow_model.cpp  tensorflow_model.h
test/: ipp_fft.cpp  rnn.cpp  tensorflow_model.cpp
training/: cyf_dump_rnn.py  dump_test_data.py  rnn_train.py  rnn_train_gain_only.py
